Task 329962: Fixed splitter bars from overlapping dialog boxes or other elements.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -68,6 +68,15 @@ html, body{
   font-family: 'Glyphicons Halflings';
 }
 
+// enhsplitter Overrides
+// Need this so the splitter bar doesn't overlap dialog windows
+.splitter-vertical > .splitter_bar, .splitter-horizontal > .splitter_bar{
+  z-index: 10;
+}
+.splitter_container.splitter-active > .splitter_bar{
+  z-index: 11;
+}
+
 // KOMET Login styles
 .external.login{
   background-color: #eef1f3;
